[fix] trying fix render on iphone

--- a/src/components/Frame/frame.style.css
+++ b/src/components/Frame/frame.style.css
@@ -6,7 +6,7 @@
     align-items: center;
     justify-content: center;
     transition: var(--transition), opacity .75s ease;
-    will-change: transform;
+    /* will-change: transform; */
     transform-style: preserve-3d;
 }
 
